Part5_practice/result_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: result
    spec:
      containers:
      - image: dockersamples/examplevotingapp_result:before
        name: examplevotingapp-result-wp2km
        ports:
        - containerPort: 80
        resources: {}
status: {}
