Part5_practice/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: db
  name: redis-clusterip
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: db
  type: ClusterIP
status:
  loadBalancer: {}
