Part5_practice/result_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: result
  name: result-nodeport
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 80
  selector:
    app: result
  type: NodePort
status:
  loadBalancer: {}
